--- a/solution.ipynb
+++ b/solution.ipynb
@@ -73,7 +73,7 @@
         " Ancient genomes from Europe and Asia are found in Ancients, while Eurasian genomes with a DataBP of 10 are found in Moderns.\n",
         "\n",
         "**Note:** \n",
-        "Dataset files should be available in the data folder (Eurasian.xlsx, Eurasian_modern_samples.csv, 20130606_sample_info.xlsx, Test Cases.xlsx, and Reich dataset V50.xlsx). "
+        "Dataset files should be available in the data folder (Eurasian.xlsx, Eurasian_modern_samples.csv, 20130606_sample_info.xlsx, and Test Cases.xlsx). "
       ]
     },
     {
@@ -121,9 +121,6 @@
         "Brandysek_inds = pd.read_excel(test_cases, 'Brandysek inds')\n",
         "Brandysek_inds = Brandysek_inds.iloc[0:14,:]\n",
         "Brandysek_inds.rename(columns={'Version ID':'Sample ID'},inplace=True)\n",
-        "\n",
-        "riech = pd.read_excel(f\"{baseDir}/Reich dataset V50.xlsx\")\n",
-        "riech.rename(columns = {'Version ID':'Sample ID'}, inplace=True) \n",
         "\n",
         "Moderns['STD'] = 0 "
       ]
@@ -874,8 +871,8 @@
               "      <td>0.039069</td>\n",
               "      <td>0.107425</td>\n",
               "      <td>3705.0</td>\n",
-              "      <td>4819.0</td>\n",
-              "      <td>1114.0</td>\n",
+              "      <td>4899.0</td>\n",
+              "      <td>1194.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4098</th>\n",
@@ -893,8 +890,8 @@
               "      <td>0.025139</td>\n",
               "      <td>0.065112</td>\n",
               "      <td>3200.0</td>\n",
-              "      <td>2944.0</td>\n",
-              "      <td>256.0</td>\n",
+              "      <td>2655.0</td>\n",
+              "      <td>545.0</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -918,8 +915,8 @@
               "4098          0.620778          0.025139              0.065112   \n",
               "\n",
               "      Mean date (BP)  TPS predicted date (BP)  difference  \n",
-              "79            3705.0                   4819.0      1114.0  \n",
-              "4098          3200.0                   2944.0       256.0  "
+              "79            3705.0                   4899.0      1194.0  \n",
+              "4098          3200.0                   2655.0       545.0  "
             ]
           },
           "execution_count": 12,
@@ -983,17 +980,17 @@
           "text": [
             "Test set evaluation:\n",
             "_____________________________________\n",
-            "MAE: 463.0404723346829\n",
-            "MSE: 599372.7427431849\n",
-            "RMSE: 774.1916705462446\n",
-            "R2 Square 0.8836974183037242\n",
+            "MAE: 459.57689608636974\n",
+            "MSE: 588849.2952450742\n",
+            "RMSE: 767.3651642113252\n",
+            "R2 Square 0.8857393932303349\n",
             "__________________________________\n",
             "Train set evaluation:\n",
             "_____________________________________\n",
-            "MAE: 229.4803728650469\n",
-            "MSE: 181058.3947211691\n",
-            "RMSE: 425.50957065754596\n",
-            "R2 Square 0.9652442808335716\n",
+            "MAE: 228.13670194852057\n",
+            "MSE: 169922.55529071443\n",
+            "RMSE: 412.2166363584983\n",
+            "R2 Square 0.9673819011771262\n",
             "__________________________________\n"
           ]
         }
