--- a/steps/Step 3/TestingTPS.ipynb
+++ b/steps/Step 3/TestingTPS.ipynb
@@ -187,7 +187,7 @@
       ],
       "source": [
         "merg8q=pd.read_csv('merge.8.Q', sep=' ',names=['AncientComponent1', 'AncientComponent2','AncientComponent3','AncientComponent4', 'AncientComponent5', 'ModernComponent1',\n",
-        "                                'ModernComponent2','ModernComponent3'])\n",
+        "                                'ModernComponent2','ModernComponent3']) \n",
         "merg8q_961=merg8q.head(961)\n",
         "merg8q_961.head(5)"
       ]
@@ -258,8 +258,7 @@
       ],
       "source": [
         "# load the model\n",
-        "# loaded_model = pickle.load(open('random_model.pkl', 'rb'))\n",
-        "loaded_model = pickle.load(open(r'..\\Step 2\\random_model.pkl', 'rb'))\n",
+        "loaded_model = pickle.load(open('random_model.pkl', 'rb'))\n",
         "merg8q_961['TPS predicted date (BP)'] = loaded_model.predict(merg8q_961).round()\n",
         "merg8q_961['TPS predicted date (BP)'].tail(10) "
       ]
