--- a/steps/Step 3/TPS(running).ipynb
+++ b/steps/Step 3/TPS(running).ipynb
@@ -186,10 +186,28 @@
         }
       ],
       "source": [
-        "merg8q=pd.read_csv('merge.8.Q', sep=' ',names=['AncientComponent1', 'AncientComponent2','AncientComponent3','AncientComponent4', 'AncientComponent5', 'ModernComponent1',\n",
-        "                                'ModernComponent2','ModernComponent3']) \n",
-        "merg8q_961=merg8q.head(961)\n",
-        "merg8q_961.head(5)"
+        "data = input(\"Please enter data file name (example: merge.8.Q) :\") or 'merge.8.Q'\n",
+        "df = pd.read_csv(data, sep=' ',names=['AncientComponent1', 'AncientComponent2','AncientComponent3','AncientComponent4', 'AncientComponent5', 'ModernComponent1',\n",
+        "                     'ModernComponent2','ModernComponent3']) \n",
+        "df = df.head(961)\n",
+        "df.head(5)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "merge.8.Q\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(data)"
       ]
     },
     {
@@ -203,16 +221,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 4,
       "metadata": {
         "id": "Yw0W46XII35D"
       },
       "outputs": [],
       "source": [
-        "merg8q_961['mean_Ancient_columns'] = merg8q_961.loc[:,['AncientComponent1',\t'AncientComponent2',\t'AncientComponent3',\t'AncientComponent4',\t'AncientComponent5']].mean(axis=1)  \n",
-        "AncientComponent1_mean = merg8q_961['AncientComponent1'].mean()\n",
-        "merg8q_961['AncientComponent1_diff_mean'] = abs(merg8q_961['AncientComponent1'] - AncientComponent1_mean)  \n",
-        "merg8q_961['AncientComponent1'] = merg8q_961['AncientComponent1']+(3*merg8q_961['AncientComponent1_diff_mean'])"
+        "df['mean_Ancient_columns'] = df.loc[:,['AncientComponent1',\t'AncientComponent2','AncientComponent3','AncientComponent4','AncientComponent5']].mean(axis=1)  \n",
+        "AncientComponent1_mean = df['AncientComponent1'].mean()\n",
+        "df['AncientComponent1_diff_mean'] = abs(df['AncientComponent1'] - AncientComponent1_mean)  \n",
+        "df['AncientComponent1'] = df['AncientComponent1']+(3*df['AncientComponent1_diff_mean'])"
       ]
     },
     {
@@ -226,7 +244,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 5,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -251,7 +269,7 @@
               "Name: TPS predicted date (BP), dtype: float64"
             ]
           },
-          "execution_count": 4,
+          "execution_count": 5,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -259,19 +277,21 @@
       "source": [
         "# load the model\n",
         "loaded_model = pickle.load(open('random_model.pkl', 'rb'))\n",
-        "merg8q_961['TPS predicted date (BP)'] = loaded_model.predict(merg8q_961).round()\n",
-        "merg8q_961['TPS predicted date (BP)'].tail(10) "
+        "df['TPS predicted date (BP)'] = loaded_model.predict(merg8q_961).round()\n",
+        "df['TPS predicted date (BP)'].tail(10) "
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 6,
       "metadata": {
         "id": "WYQNIN1_Kl4I"
       },
       "outputs": [],
       "source": [
-        "merg8q_961.to_excel('mergq.xlsx',index=None)"
+        "#save the output as an Excel file\n",
+        "outputfile_name = input(\"Please enter output file name (example: mergq.xlsx):\") or 'mergq.xlsx'\n",
+        "df.to_excel(outputfile_name,index=None)"
       ]
     }
   ],
