--- a/steps/Step 3/TPS(running).ipynb
+++ b/steps/Step 3/TPS(running).ipynb
@@ -227,7 +227,7 @@
       },
       "outputs": [],
       "source": [
-        "df['mean_Ancient_columns'] = df.loc[:,['AncientComponent1',\t'AncientComponent2','AncientComponent3','AncientComponent4','AncientComponent5']].mean(axis=1)  \n",
+        "df['mean_Ancient_columns'] = df.loc[:,['AncientComponent1','AncientComponent2','AncientComponent3','AncientComponent4','AncientComponent5']].mean(axis=1)  \n",
         "AncientComponent1_mean = df['AncientComponent1'].mean()\n",
         "df['AncientComponent1_diff_mean'] = abs(df['AncientComponent1'] - AncientComponent1_mean)  \n",
         "df['AncientComponent1'] = df['AncientComponent1']+(3*df['AncientComponent1_diff_mean'])"
@@ -244,7 +244,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 6,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -269,7 +269,7 @@
               "Name: TPS predicted date (BP), dtype: float64"
             ]
           },
-          "execution_count": 5,
+          "execution_count": 6,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -277,13 +277,13 @@
       "source": [
         "# load the model\n",
         "loaded_model = pickle.load(open('random_model.pkl', 'rb'))\n",
-        "df['TPS predicted date (BP)'] = loaded_model.predict(merg8q_961).round()\n",
+        "df['TPS predicted date (BP)'] = loaded_model.predict(df).round()\n",
         "df['TPS predicted date (BP)'].tail(10) "
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": 7,
       "metadata": {
         "id": "WYQNIN1_Kl4I"
       },
