--- a/solution.ipynb
+++ b/solution.ipynb
@@ -466,10 +466,7 @@
       "source": [
         "sns.distplot(Ancients['Mean date (BP)'], fit = norm) # A frequency distribution plot and the maximum likelihood gaussian distribution fit\n",
         "fig = plt.figure()\n",
-        "stats.probplot(Ancients['Mean date (BP)'], plot=plt) # It generates a probability plot of sample data against the quantiles of a specified theoretical distribution (the normal distribution by default).\n",
-        "\"\"\"Skewness is a measure of symmetry, or more precisely, the lack of symmetry.\n",
-        " Kurtosis is a measure of whether the data are heavy-tailed or light-tailed relative to a normal distribution.\n",
-        " That is, data sets with high kurtosis tend to have heavy tails, or outliers.\"\"\""
+        "stats.probplot(Ancients['Mean date (BP)'], plot=plt) # It generates a probability plot of sample data against the quantiles of a specified theoretical distribution (the normal distribution by default)."
       ]
     },
     {
