--- a/solution.ipynb
+++ b/solution.ipynb
@@ -464,7 +464,7 @@
         }
       ],
       "source": [
-        "sns.distplot(Ancients['Mean date (BP)'], fit = norm) # A frequency distribution plot and the maximum likelihood gaussian distribution fit\n",
+        "sns.distplot(Ancients['Mean date (BP)'], fit = norm) # A frequency distribution plot and the maximum likelihood Gaussian distribution fit\n",
         "fig = plt.figure()\n",
         "stats.probplot(Ancients['Mean date (BP)'], plot=plt) # It generates a probability plot of sample data against the quantiles of a specified theoretical distribution (the normal distribution by default)."
       ]
