--- a/solution.ipynb
+++ b/solution.ipynb
@@ -658,9 +658,9 @@
         "\n",
         "#train_set, test_set (unseen)\n",
         "test_set = test_set.append([modern_for_test, Brandysek_inds_in_Ancients])\n",
-        "test_set.sample(frac=1) # shuffle the DataFrame rows\n",
+        "test_set = test_set.sample(frac=1) # shuffle the DataFrame rows\n",
         "train_set = train_set.append([modern_for_modeling])\n",
-        "train_set =train_set.sample(frac=1)\n",
+        "train_set = train_set =train_set.sample(frac=1)\n",
         "\n",
         "#drop Sample ID, Counrty, Dating and STD columns    \n",
         "whole_set = train_set.append([test_set])\n",
