--- a/solution.ipynb
+++ b/solution.ipynb
@@ -431,7 +431,10 @@
         {
           "data": {
             "text/plain": [
-              "'Skewness is a measure of symmetry, or more precisely, the lack of symmetry.\\n Kurtosis is a measure of whether the data are heavy-tailed or light-tailed relative to a normal distribution.\\n That is, data sets with high kurtosis tend to have heavy tails, or outliers.'"
+              "((array([-3.58788103, -3.34962434, -3.21815727, ...,  3.21815727,\n",
+              "          3.34962434,  3.58788103]),\n",
+              "  array([  90,  124,  126, ..., 9933, 9952, 9992], dtype=int64)),\n",
+              " (1952.546304163356, 3925.416305916306, 0.9865907741315159))"
             ]
           },
           "execution_count": 4,
@@ -578,7 +581,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 7,
       "metadata": {
         "id": "hFc0EOYbOxPD"
       },
@@ -608,7 +611,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 8,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -693,7 +696,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 9,
       "metadata": {
         "id": "waPyHSJ9XVuJ"
       },
@@ -735,7 +738,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 10,
       "metadata": {
         "id": "fDwQLXEO43I2"
       },
@@ -756,7 +759,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 11,
       "metadata": {
         "id": "pYJXyCPeqGGz"
       },
@@ -802,70 +805,74 @@
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
-              "      <th>79</th>\n",
-              "      <td>ALA028</td>\n",
-              "      <td>Turkey</td>\n",
-              "      <td>Direct: IntCal20</td>\n",
-              "      <td>0.804012</td>\n",
-              "      <td>0.147650</td>\n",
-              "      <td>0.099667</td>\n",
-              "      <td>0.07478</td>\n",
-              "      <td>0.00001</td>\n",
-              "      <td>0.001605</td>\n",
-              "      <td>0.028964</td>\n",
-              "      <td>0.394844</td>\n",
-              "      <td>0.039069</td>\n",
-              "      <td>0.107425</td>\n",
-              "      <td>3705.0</td>\n",
-              "      <td>4929.0</td>\n",
-              "      <td>1224.0</td>\n",
+              "      <th>2108</th>\n",
+              "      <td>I6696</td>\n",
+              "      <td>Czech Republic</td>\n",
+              "      <td>Context: Archaeological - Period</td>\n",
+              "      <td>0.307824</td>\n",
+              "      <td>0.047207</td>\n",
+              "      <td>0.194089</td>\n",
+              "      <td>0.030475</td>\n",
+              "      <td>0.092464</td>\n",
+              "      <td>0.036698</td>\n",
+              "      <td>0.015366</td>\n",
+              "      <td>0.433269</td>\n",
+              "      <td>0.031435</td>\n",
+              "      <td>0.103986</td>\n",
+              "      <td>4575.0</td>\n",
+              "      <td>3908.0</td>\n",
+              "      <td>667.0</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>4098</th>\n",
-              "      <td>WEZ56.SG</td>\n",
-              "      <td>Germany</td>\n",
-              "      <td>Context: Archaeological - Period</td>\n",
-              "      <td>0.548674</td>\n",
-              "      <td>0.167632</td>\n",
-              "      <td>0.171319</td>\n",
-              "      <td>0.00001</td>\n",
-              "      <td>0.09086</td>\n",
-              "      <td>0.017590</td>\n",
-              "      <td>0.028525</td>\n",
-              "      <td>0.620778</td>\n",
-              "      <td>0.025139</td>\n",
-              "      <td>0.065112</td>\n",
-              "      <td>3200.0</td>\n",
-              "      <td>2683.0</td>\n",
-              "      <td>517.0</td>\n",
+              "      <th>901</th>\n",
+              "      <td>NA07048</td>\n",
+              "      <td>CEU</td>\n",
+              "      <td>NaN</td>\n",
+              "      <td>0.411458</td>\n",
+              "      <td>0.099024</td>\n",
+              "      <td>0.082195</td>\n",
+              "      <td>0.006816</td>\n",
+              "      <td>0.062705</td>\n",
+              "      <td>0.007039</td>\n",
+              "      <td>0.009794</td>\n",
+              "      <td>0.684928</td>\n",
+              "      <td>0.032137</td>\n",
+              "      <td>0.054628</td>\n",
+              "      <td>10.0</td>\n",
+              "      <td>10.0</td>\n",
+              "      <td>0.0</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "     Sample ID  Country                            Dating  AncientComponent1  \\\n",
-              "79      ALA028   Turkey                  Direct: IntCal20           0.804012   \n",
-              "4098  WEZ56.SG  Germany  Context: Archaeological - Period           0.548674   \n",
+              "     Sample ID         Country                            Dating  \\\n",
+              "2108     I6696  Czech Republic  Context: Archaeological - Period   \n",
+              "901    NA07048             CEU                               NaN   \n",
               "\n",
-              "      AncientComponent1_diff_mean  AncientComponent2  AncientComponent3  \\\n",
-              "79                       0.147650           0.099667            0.07478   \n",
-              "4098                     0.167632           0.171319            0.00001   \n",
+              "      AncientComponent1  AncientComponent1_diff_mean  AncientComponent2  \\\n",
+              "2108           0.307824                     0.047207           0.194089   \n",
+              "901            0.411458                     0.099024           0.082195   \n",
               "\n",
-              "      AncientComponent4  AncientComponent5  ModernComponent1  \\\n",
-              "79              0.00001           0.001605          0.028964   \n",
-              "4098            0.09086           0.017590          0.028525   \n",
+              "      AncientComponent3  AncientComponent4  AncientComponent5  \\\n",
+              "2108           0.030475           0.092464           0.036698   \n",
+              "901            0.006816           0.062705           0.007039   \n",
               "\n",
-              "      ModernComponent2  ModernComponent3  mean_Ancient_columns  \\\n",
-              "79            0.394844          0.039069              0.107425   \n",
-              "4098          0.620778          0.025139              0.065112   \n",
+              "      ModernComponent1  ModernComponent2  ModernComponent3  \\\n",
+              "2108          0.015366          0.433269          0.031435   \n",
+              "901           0.009794          0.684928          0.032137   \n",
               "\n",
-              "      Mean date (BP)  TPS predicted date (BP)  difference  \n",
-              "79            3705.0                   4929.0      1224.0  \n",
-              "4098          3200.0                   2683.0       517.0  "
+              "      mean_Ancient_columns  Mean date (BP)  TPS predicted date (BP)  \\\n",
+              "2108              0.103986          4575.0                   3908.0   \n",
+              "901               0.054628            10.0                     10.0   \n",
+              "\n",
+              "      difference  \n",
+              "2108       667.0  \n",
+              "901          0.0  "
             ]
           },
-          "execution_count": 12,
+          "execution_count": 11,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -911,7 +918,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 12,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -926,17 +933,17 @@
           "text": [
             "Test set evaluation:\n",
             "_____________________________________\n",
-            "MAE: 455.67268556005394\n",
-            "MSE: 570388.4862680162\n",
-            "RMSE: 755.2406810203064\n",
-            "R2 Square 0.8893215376808936\n",
+            "MAE: 473.93159244264507\n",
+            "MSE: 626191.5373375168\n",
+            "RMSE: 791.3226505904635\n",
+            "R2 Square 0.8784934862146079\n",
             "__________________________________\n",
             "Train set evaluation:\n",
             "_____________________________________\n",
-            "MAE: 225.84272552321386\n",
-            "MSE: 160497.27359877317\n",
-            "RMSE: 400.621109776773\n",
-            "R2 Square 0.9691911652217682\n",
+            "MAE: 229.4164902573972\n",
+            "MSE: 177432.94322831367\n",
+            "RMSE: 421.22789939451263\n",
+            "R2 Square 0.9659402174905337\n",
             "__________________________________\n"
           ]
         }
