--- a/steps/Step 3/TPS(running).ipynb
+++ b/steps/Step 3/TPS(running).ipynb
@@ -291,7 +291,7 @@
       "source": [
         "#save the output as an Excel file\n",
         "outputfile_name = input(\"Please enter output file name (example: mergq.xlsx):\") or 'mergq.xlsx'\n",
-        "df.to_excel(outputfile_name,index=None)"
+        "df.to_excel(\"outputfile_name.xlsx\",index=None)"
       ]
     }
   ],
