--- a/solution.ipynb
+++ b/solution.ipynb
@@ -13,7 +13,7 @@
         "   3.1. Clean the data  \n",
         "   3.2. Filter important features  \n",
         "   3.3. Check for missing values     \n",
-        "   3.4. Feature engineering (feature extraction, feature selection)  \n",
+        "   3.4. Feature engineering (feature creation, feature selection)  \n",
         "4. Train the model\n",
         "5. Use the model (Prediction)\n",
         "6. Evaluate the model (accuracy)"
