--- a/solution.ipynb
+++ b/solution.ipynb
@@ -710,7 +710,7 @@
         "  model = []\n",
         "  nth_k=1\n",
         "  nth_K_X_train={}\n",
-        "  rf_reg = RandomForestRegressor()\n",
+        "  rf_reg = RandomForestRegressor(max_depth=15)\n",
         "  for train_index, val_index in kf.split(X):\n",
         "    X_train, X_val = X[train_index], X[val_index]\n",
         "    y_train, y_val = y[train_index], y[val_index]\n",
@@ -805,71 +805,67 @@
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
-              "      <th>2108</th>\n",
-              "      <td>I6696</td>\n",
-              "      <td>Czech Republic</td>\n",
-              "      <td>Context: Archaeological - Period</td>\n",
-              "      <td>0.307824</td>\n",
-              "      <td>0.047207</td>\n",
-              "      <td>0.194089</td>\n",
-              "      <td>0.030475</td>\n",
-              "      <td>0.092464</td>\n",
-              "      <td>0.036698</td>\n",
-              "      <td>0.015366</td>\n",
-              "      <td>0.433269</td>\n",
-              "      <td>0.031435</td>\n",
-              "      <td>0.103986</td>\n",
-              "      <td>4575.0</td>\n",
-              "      <td>3908.0</td>\n",
-              "      <td>667.0</td>\n",
-              "    </tr>\n",
-              "    <tr>\n",
-              "      <th>901</th>\n",
-              "      <td>NA07048</td>\n",
-              "      <td>CEU</td>\n",
+              "      <th>104</th>\n",
+              "      <td>HG00267</td>\n",
+              "      <td>FIN</td>\n",
               "      <td>NaN</td>\n",
-              "      <td>0.411458</td>\n",
-              "      <td>0.099024</td>\n",
-              "      <td>0.082195</td>\n",
-              "      <td>0.006816</td>\n",
-              "      <td>0.062705</td>\n",
-              "      <td>0.007039</td>\n",
-              "      <td>0.009794</td>\n",
-              "      <td>0.684928</td>\n",
-              "      <td>0.032137</td>\n",
-              "      <td>0.054628</td>\n",
+              "      <td>0.583910</td>\n",
+              "      <td>0.185250</td>\n",
+              "      <td>0.026795</td>\n",
+              "      <td>0.002692</td>\n",
+              "      <td>0.055282</td>\n",
+              "      <td>0.000010</td>\n",
+              "      <td>0.001401</td>\n",
+              "      <td>0.812516</td>\n",
+              "      <td>0.073142</td>\n",
+              "      <td>0.022588</td>\n",
               "      <td>10.0</td>\n",
               "      <td>10.0</td>\n",
               "      <td>0.0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2371</th>\n",
+              "      <td>I8202</td>\n",
+              "      <td>Spain</td>\n",
+              "      <td>Context: Archaeological - Period</td>\n",
+              "      <td>0.219584</td>\n",
+              "      <td>0.003087</td>\n",
+              "      <td>0.116167</td>\n",
+              "      <td>0.007433</td>\n",
+              "      <td>0.065815</td>\n",
+              "      <td>0.034796</td>\n",
+              "      <td>0.018953</td>\n",
+              "      <td>0.546502</td>\n",
+              "      <td>0.000010</td>\n",
+              "      <td>0.086907</td>\n",
+              "      <td>1750.0</td>\n",
+              "      <td>3202.0</td>\n",
+              "      <td>1452.0</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "     Sample ID         Country                            Dating  \\\n",
-              "2108     I6696  Czech Republic  Context: Archaeological - Period   \n",
-              "901    NA07048             CEU                               NaN   \n",
+              "     Sample ID Country                            Dating  AncientComponent1  \\\n",
+              "104    HG00267     FIN                               NaN           0.583910   \n",
+              "2371     I8202   Spain  Context: Archaeological - Period           0.219584   \n",
               "\n",
-              "      AncientComponent1  AncientComponent1_diff_mean  AncientComponent2  \\\n",
-              "2108           0.307824                     0.047207           0.194089   \n",
-              "901            0.411458                     0.099024           0.082195   \n",
+              "      AncientComponent1_diff_mean  AncientComponent2  AncientComponent3  \\\n",
+              "104                      0.185250           0.026795           0.002692   \n",
+              "2371                     0.003087           0.116167           0.007433   \n",
               "\n",
-              "      AncientComponent3  AncientComponent4  AncientComponent5  \\\n",
-              "2108           0.030475           0.092464           0.036698   \n",
-              "901            0.006816           0.062705           0.007039   \n",
+              "      AncientComponent4  AncientComponent5  ModernComponent1  \\\n",
+              "104            0.055282           0.000010          0.001401   \n",
+              "2371           0.065815           0.034796          0.018953   \n",
               "\n",
-              "      ModernComponent1  ModernComponent2  ModernComponent3  \\\n",
-              "2108          0.015366          0.433269          0.031435   \n",
-              "901           0.009794          0.684928          0.032137   \n",
+              "      ModernComponent2  ModernComponent3  mean_Ancient_columns  \\\n",
+              "104           0.812516          0.073142              0.022588   \n",
+              "2371          0.546502          0.000010              0.086907   \n",
               "\n",
-              "      mean_Ancient_columns  Mean date (BP)  TPS predicted date (BP)  \\\n",
-              "2108              0.103986          4575.0                   3908.0   \n",
-              "901               0.054628            10.0                     10.0   \n",
-              "\n",
-              "      difference  \n",
-              "2108       667.0  \n",
-              "901          0.0  "
+              "      Mean date (BP)  TPS predicted date (BP)  difference  \n",
+              "104             10.0                     10.0         0.0  \n",
+              "2371          1750.0                   3202.0      1452.0  "
             ]
           },
           "execution_count": 11,
@@ -933,17 +929,17 @@
           "text": [
             "Test set evaluation:\n",
             "_____________________________________\n",
-            "MAE: 473.93159244264507\n",
-            "MSE: 626191.5373375168\n",
-            "RMSE: 791.3226505904635\n",
-            "R2 Square 0.8784934862146079\n",
+            "MAE: 470.0910661268556\n",
+            "MSE: 615531.7481441295\n",
+            "RMSE: 784.558314049459\n",
+            "R2 Square 0.8805619169508053\n",
             "__________________________________\n",
             "Train set evaluation:\n",
             "_____________________________________\n",
-            "MAE: 229.4164902573972\n",
-            "MSE: 177432.94322831367\n",
-            "RMSE: 421.22789939451263\n",
-            "R2 Square 0.9659402174905337\n",
+            "MAE: 227.1919316815011\n",
+            "MSE: 173301.41178484485\n",
+            "RMSE: 416.29486158832765\n",
+            "R2 Square 0.9667333005552412\n",
             "__________________________________\n"
           ]
         }
@@ -977,8 +973,12 @@
       "name": "GitHub.ipynb",
       "provenance": []
     },
+    "interpreter": {
+      "hash": "422a3a0a1c72d3852199221c5e28a2cf25f305bbd7d8807f97f3ff98cb2c5f85"
+    },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "Python 3.8.10 64-bit",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
